panoiq_stackstorm/sonar/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sonar
  name: sonar
  #namespace: "NAMESPACE"
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9000
      nodePort: 32002
      name: sonarport
  selector:
    name: sonar
