panoiq_stackstorm/sonar/sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar-ingress
  #namespace: "NAMESPACE"
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "HOST"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonar
                port: 
                  number: 32002
  ingressClassName: nginx
